# coloriser

./: CMakeLists.txt  loc.sh  run.sh
.zed/: debug.json  tasks.json
src/: ButtonObject.cpp  ButtonObject.h  ColorPool.cpp  ColorPool.h  ColorisingMethod.h  CoordinateRect.cpp  CoordinateRect.h  CubeCanvasObject.cpp  CubeCanvasObject.h  GroupBoxObject.cpp  GroupBoxObject.h  Matrix3x3.cpp  Matrix3x3.h  Pane.cpp  Pane.h  PaneContents.cpp  PaneContents.h  StubWarning.h  UiObject.cpp  UiObject.h  Window.cpp  Window.h  main.cpp  typedefs.h  v3.cpp  v3.h
